Upgrade Java version and update dependencies
Updated Java version from 11 to 17 and modified Flink scope for dependencies. Added Google Cloud Pub/Sub dependency and restructured profiles for deployment.